Improve Stream method chains